# piquant

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile-Tester  LICENSE.md  README.md  build-run-container.sh  build-test-container.sh  compile.bat  compile.sh  go.mod  go.sum  local-compile.sh  local-runner-compile.sh  local-runner-test.sh  test.sh  version.h.in
.github/workflows/: main.yaml
doc/: PIQUANT-Manual-apluw_tm_1_18_DRAFT_newStuffWTE_V231_May2019.docx  PiquantCmd-Code-Analysis.xlsx
doc/LatestDocs2022/: main.md
doc/LatestDocs2022/command_line_tool/: arguments.md  options.md  sub_commands.md  usage.md
doc/LatestDocs2022/file_formats/: calibration.md  config.md  log.md  map.md  plot.md  spectrum.md  standards_input.md
doc/LatestDocs2022/gui_details/: actions.md  command_line_options.md  file_selection.md  gui.md  text_output_&_go.md
doc/LatestDocs2022/intro/: operation.md  spectroscopy.md
doc/LatestDocs2022/quick_start/: essential_inputs.md  gui-step_by_step.md
runner/: cloudwatch-logger.go  main.go  main_test.go
src/: AmpTekRead.cpp  AmpTekRead.h  Breadboard_optic_efficiency_May2017.h  CampbellWidthData_extrap_XrayEdge_Mar2012.h  Element.cpp  Element.h  Energy_vs_Efficiency_smoothed.h  FM_OpticResponse_Nov2020.h  Fit.cpp  Fit.h  Lfit.cpp  Lfit.h  PIQUANT.cbp  PIQUANT.cscope_file_list  PIQUANT.depend  PIQUANT.layout  PIQUANT_CommandLine.cpp  ScatterXsectTable.cpp  ScatterXsectTable.h  Sewell_tube_calc.cpp  Sewell_tube_calc.h  XRFConditions.cpp  XRFconditions.h  XRFconstants.h  XRFcontrols.h  XRFstandards.h  XRFutilities.cpp  XRFutilities.h  XrayDetector.cpp  XrayDetector.h  XrayEdge.cpp  XrayEdge.h  XrayLines.cpp  XrayLines.h  XrayMaterial.cpp  XrayMaterial.h  XrayOptic.cpp  XrayOptic.h  XraySource.cpp  XraySource.h  (+127 more)
test/code/: helper.py  runtests.sh  test_helper.py  test_piquant.py  test_piquant_calc.py  test_piquant_calibrate.py  test_piquant_compare.py  test_piquant_energy_calibration.py  test_piquant_evaluate.py  test_piquant_fit.py  test_piquant_map.py  test_piquant_plot.py  test_piquant_quantify.py  test_piquant_sum.py  test_piquant_version.py  test_whole_runner.py
test/data/PIQUANT_test_data_May2020/Data_files_Crosshair_20200211_200211010146/: Normal_A_0634648629_000001C5_000068.msa  (+612 more)
test/data/expected-output/: 1map.csv  3files.csv  3map.csv  6map.csv  6map_pmcsfile_AB.csv  6map_pmcsfile_combined.csv  bulksummax.msa  multi_map.csv  quant_pmcsfile.csv  whole_runner_roi_map.csv
test/data/msa/: 1file.txt  6files.txt  Normal_A_0612672997_000001C5_000007.msa  Normal_A_0612673009_000001C5_000008.msa  Normal_A_0612673022_000001C5_000009.msa  Normal_B_0612672997_000001C5_000007.msa  Normal_B_0612673010_000001C5_000008.msa  Normal_B_0612673022_000001C5_000009.msa  files.txt  sum.txt
test/data/pixlise-datasets/: list.pmcs
(+77 files in other folders)
